Add sketch sample 4 and 5

--- a/css/main.css
+++ b/css/main.css
@@ -2885,7 +2885,7 @@ body.search-is-visible {
  * ## page and single entry main content
  * ------------------------------------------------------------------- */
 .s-content__main, .entry__main {
-  padding-left: 7rem;
+  padding-left: rem;
   padding-right: 7rem;
 }
 
